--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
   <head>
     <title>Stockticker</title>
@@ -18,10 +17,7 @@
   <% end %>
   
   </body>
-</html>
 
-
-<html>
  <% if user_signed_in? %>
   <body>
     <div id="main-container" class="container">
@@ -30,30 +26,27 @@
           <div class="panel panel-primary">
             <div class="panel-heading"><center><b>Watch List</b></center></div>
               <center>
-                <% @stocks.each do |stock| %>
-                  <tr>
-                    <td><%= link_to stock.ticker, stock_path(:id=>stock.id,:ticker=>stock.ticker) %></td>
-                    <td><%= link_to 'Delete', stock_path(stock), method: :delete %></td>
-                    <br>
-                  </tr>
-                <% end %>
-                <br>
                 <%= simple_form_for @add_stock do |f| %>
                   <center>Add Stock</center>
-                  <%= f.input :ticker, label: false %>
+                  <%= f.input :ticker, label: false, :input_html => {:maxlength => 4, :size => 5} %>
                   <br>
                   <center><%= f.button :submit, 'Add'  %></center>
                 <% end %>
-                <br>
-                <br>
+                
+                <% @stocks.each do |stock| %>
+                  <tr>
+                    <td><%= link_to stock.ticker, stock_path(:id=>stock.id, :ticker=> stock.ticker) %></td>
+                    <td><%= link_to 'Delete', stock_path(stock), method: :delete, id: stock.ticker+'_destroy' %></td>
+                    <br>
+                  </tr>
+                <% end %>
                 <%= link_to('Logout', destroy_user_session_path, method: :delete) %>    
               </center>
           </div>  
-      
         </div>  
 
         <div class="col-xs-10">
-        <%=yield%>
+          <%=yield%>
         </div>
       </div>
     </div>
@@ -61,6 +54,6 @@
   <% else %>
     <%= yield %>
   <% end %>
-</html>
+</html>   
 
  
