--- a/app/views/stocks/show.html.erb
+++ b/app/views/stocks/show.html.erb
@@ -27,9 +27,9 @@
 		<br>
 		<br>
 
-<%= high_chart("some_id", @chart) %>
+<%= high_chart("stock_graph", @chart) %>
 
-		<table class="table table-striped table-bordered">
+		<table class="table table-striped table-bordered" id="stock_table">
 			<thead class="thead-dark">
 				<tr>
 					<th scope="col">Date</th>
